plugins {
    id "io.spring.dependency-management" // See ../../../build.gradle for version.
    id "jacoco"
    id "java-library"
    id "org.sonarqube" // See ../../../build.gradle for version.
}

group = "no.nav.testnav.libs"

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

dependencyManagement {
    applyMavenExclusions = false
    imports {
        mavenBom "org.springframework.boot:spring-boot-dependencies:3.2.1"
    }
}

dependencies {
    annotationProcessor 'org.projectlombok:lombok'

    implementation 'org.projectlombok:lombok'

    testAnnotationProcessor 'org.projectlombok:lombok'

    testImplementation "org.junit.jupiter:junit-jupiter:5.10.1"
    testImplementation "org.springframework.boot:spring-boot-starter-test"
}

repositories {
    mavenCentral()
    maven {
        name = "Confluent"
        url = uri("https://packages.confluent.io/maven/")
    }
    mavenLocal()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

sonarqube {
    properties {
        property "sonar.dynamicAnalysis", "reuseReports"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.java.coveragePlugin", "jacoco"
        property "sonar.language", "java"
        property "sonar.organization", "navikt"
        property "sonar.project.monorepo.enabled", true
        property "sonar.sourceEncoding", "UTF-8"
        property "sonar.token", System.getenv("SONAR_TOKEN")
    }
}

tasks.test {
    useJUnitPlatform()
    jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
}